# DetectAndDeter

./: .gitignore  LICENSE  README.rst  ai.py  build.gradle  chatbot.py  console.txt  json-to-text.py  pyproject.toml  recog_callback.py  sentence_tokenizer.pickle  settings.gradle  watson.py  watson2.py  watson3.py
app/: build.gradle
app/libs/: requirements.txt
app/src/androidTest/java/com/example/detectanddeter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/app/detectanddeter/: DisplayMessageActivity.java  Main.java  NavBar.java
app/src/main/java/app/detectanddeter/ui/gallery/: GalleryFragment.java  GalleryViewModel.java
app/src/main/java/app/detectanddeter/ui/home/: HomeFragment.java  HomeViewModel.java
app/src/main/java/app/detectanddeter/ui/slideshow/: SlideshowFragment.java  SlideshowViewModel.java
app/src/main/java/com/example/detectanddeter/: MainActivity.java
app/src/main/python/: ai.py  chatbot.py  detect_and_deter.py  hello.py  recog.py  recog_callback.py  timer.py  watson2.py  watson_callback.py
app/src/main/res/layout/: activity_main.xml  app_bar_nav_bar.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/detectanddeter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
recordings/: first_test.flac
src/detectanddeter/: __main__.py  app.py
src/detectanddeter.dist-info/: METADATA
