[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "DetectAndDeter"
bundle = "com.example"
version = "0.0.1"
url = "https://example.com/detectanddeter"
license = "Apache Software License"
author = 'Max Gordon'
author_email = "mgordon291us@gmail.com"

[tool.briefcase.app.detectanddeter]
formal_name = "DetectAndDeter"
description = "Uses deep learning to detect and deter telemarketers"
icon = "src/detectanddeter/resources/detectanddeter"
sources = ['src/detectanddeter']
requires = []


[tool.briefcase.app.detectanddeter.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.detectanddeter.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]

[tool.briefcase.app.detectanddeter.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.detectanddeter.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.detectanddeter.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
